--- a/src/components/Page/Page.scss
+++ b/src/components/Page/Page.scss
@@ -2,8 +2,7 @@
   &__title {
     font-size: var(--text-xxxl);
     margin-bottom: var(--space-sm);
-    color: var(--color-clear);
+    padding-top: var(--space-xs);
     text-align: center;
-    color: var(--color-primary-light);
   }
 }
